fixes delete buttons on mobile

--- a/src/client/success/remove-link.scss
+++ b/src/client/success/remove-link.scss
@@ -7,6 +7,8 @@
 
   @extend .button;
 
+  display: inline;
+  width: auto;
   font-size: 1rem;
   color: $danger;
   padding: 0.5em;
